# blazevg

./: CMakeLists.txt  README.md
include/: blazevg.hh  blazevgc.h
include/backends/: diligent.hh
source/: blazevg.cc  blazevgc.c
source/backends/: diligent.cc
